Fix alignment of activity buttons

--- a/style/baseline.css
+++ b/style/baseline.css
@@ -35,6 +35,10 @@
       > .icon {
         width: 25%;
         font-size: 200%;
+
+        + * {
+          flex-grow: 1;
+        }
       }
     }
 
